<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_activity_background"
        android:orientation="vertical"
        android:layout_margin="5sp"
        android:layout_gravity="center"
        android:gravity="center"
        tools:context=".SignUpActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/pinkish_bg"
            android:layout_width="360dp"
            android:padding="20sp"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:id="@+id/textView2"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                app:helperText="*required"
                app:helperTextTextColor="#ff0000"
                app:startIconDrawable="@drawable/baseline_person_24">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:inputType="text"
                    android:hint="@string/enter_name"
                    android:ems="10"
                    android:background="@drawable/grey_background"
                    android:textSize="25sp"
                    android:id="@+id/editTextName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                app:helperText="*required"
                app:helperTextTextColor="#ff0000"
                app:startIconDrawable="@drawable/baseline_person_24">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/enter_g_mail_id"
                    android:ems="10"
                    android:background="@drawable/grey_background"
                    android:textSize="25sp"
                    android:id="@+id/editTextGmailid"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="#ff0000"
                app:startIconDrawable="@drawable/baseline_person_24">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:ems="10"
                    android:background="@drawable/grey_background"
                    android:textSize="25sp"
                    android:id="@+id/editTextpassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:text="@string/register"
                android:layout_width="200sp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="18sp"
                android:backgroundTint="#855043"
                android:id="@+id/btnRegister"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20sp"
                android:layout_height="40sp">

            <TextView
                    android:text="@string/already_have_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>

            <Button
                    android:text="@string/log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#855043"
                    android:id="@+id/btnlogin"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>